[gd_scene load_steps=7 format=3 uid="uid://bd6jqhg5jtskw"]

[ext_resource type="Script" path="res://scenes/components/objects/demonic-ball/DemonicBall.gd" id="1_myssn"]
[ext_resource type="PackedScene" uid="uid://ci7kfws1k26yq" path="res://scenes/components/models/demonic-ball/scene.gltf" id="2_wnf05"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mih8v"]
radius = 0.530907

[sub_resource type="Animation" id="Animation_jfih7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes/EyeRight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Eyes/EyeLeft:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Eyes/Eye:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}

[sub_resource type="Animation" id="Animation_8j4xk"]
resource_name = "rhythm"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes/EyeRight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [10.0, 50.0, 10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Eyes/EyeLeft:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [10.0, 50.0, 10.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Eyes/Eye:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [10.0, 50.0, 10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2umxg"]
_data = {
"RESET": SubResource("Animation_jfih7"),
"rhythm": SubResource("Animation_8j4xk")
}

[node name="DemonicBall" type="RigidBody3D"]
collision_layer = 8
collision_mask = 7
mass = 1000.0
freeze = true
script = ExtResource("1_myssn")
metadata/_edit_group_ = true

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_mih8v")
metadata/_edit_lock_ = true

[node name="DemonBall" parent="." instance=ExtResource("2_wnf05")]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Eyes" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Eye" type="SpotLight3D" parent="Eyes"]
transform = Transform3D(-0.903836, 2.14644e-10, 0.427878, -0.210294, 0.870888, -0.444219, -0.372634, -0.491481, -0.78714, -0.00201192, 0.323938, 0.399899)
light_color = Color(0, 0.454902, 0.654902, 1)
light_energy = 10.0
light_indirect_energy = 5.0
light_specular = 1.0
shadow_enabled = true
spot_angle = 60.0
metadata/_edit_lock_ = true

[node name="EyeRight" type="OmniLight3D" parent="Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.3, 0.3)
light_color = Color(0, 0.454902, 0.654902, 1)
light_energy = 10.0
light_indirect_energy = 10.0
light_specular = 1.0
shadow_enabled = true
omni_range = 0.3
metadata/_edit_lock_ = true

[node name="EyeLeft" type="OmniLight3D" parent="Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.3, 0.3)
light_color = Color(0, 0.454902, 0.654902, 1)
light_energy = 10.0
light_indirect_energy = 10.0
light_specular = 1.0
shadow_enabled = true
omni_range = 0.3
metadata/_edit_lock_ = true

[node name="Pulsation" type="AnimationPlayer" parent="."]
autoplay = "rhythm"
libraries = {
"": SubResource("AnimationLibrary_2umxg")
}

[node name="Shot" type="Timer" parent="."]
one_shot = true

[node name="Shot_2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Shot" to="." method="_on_shot_timeout"]
[connection signal="timeout" from="Shot_2" to="." method="_on_shot_2_timeout"]
